--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,11 @@
           media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="/img/splash/apple-splash-1136-640.jpg"
           media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <title>Fox Sportif</title>
+    <title>Santa Factory</title>
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but Fox Sportif doesn't work properly without
+    <strong>We're sorry but Santa Factory doesn't work properly without
         JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id="loading-bg">
