--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,6 @@
 <div id="app">
 
 </div>
-<!-- built files will be auto injected -->2
+<!-- built files will be auto injected -->
 </body>
 </html>
